updated supporting text

--- a/model_event.qmd
+++ b/model_event.qmd
@@ -7,7 +7,7 @@ Event studies are a common approach in econometrics to assess the impact of an e
 
 The goal is to estimate the portion of post-event change that can be attributed to the event itself, isolating it from other market and firm-specific effects. We do this by predicting what would have happened if the event had not occurred (the counterfactual) and comparing it to the actual observed data to estimate the resulting *abnormal returns* (AR).
 
-### Estimation and Observation Data {#sec-data-split}
+## Estimation and Observation Data {#sec-data-split}
 
 Following the process described by @HuntingtonKlein [chap 17.2.1], we pick an "estimation period" and an "observation period".
 
@@ -15,7 +15,7 @@ The estimation period ends 1 quarter before the acquisition. This is to remove i
 
 The observation period chosen is the quarter of the event + 7 quarters after the event. Based on partnership agreement the portfolio can be transferred with deliquent borrowers on day one [e.g., @gap2021] or the impact may be some quarters after the acquisition as borrowers receive and start using their new partner cards. It will take least 30 days to determine if any of these borrowers are deliquent.
 
-### Sense check
+## Sense check
 
 The joint test problem arises because we are effectively testing two things: the counterfactual model and the event impact. Consequently, we need an approach to accurately evaluate if our counterfactual model results are credible. One approach suggested by @HuntingtonKlein is to test using observations where we expect no effect; if there were resulting "abnormal returns" this would point to an issue with the model.
 
