--- a/data_fed.qmd
+++ b/data_fed.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Explanatory Data"
+format: html
 ---
 
 ## US Economic Data
@@ -7,23 +8,6 @@ title: "Explanatory Data"
 #| echo: false
 #| warning: false
 source('functions.R')
-```
-
-As discussed in @sec-trend-event the impact of the partnership event can be masked by trends and seasonality.
-
-The simplist model approach we look at is the Market model, see @sec-model-market, which involves adjusting each Bank's *`r credit_card.target_label()`* by removing the influence of the broader trend within its respective group (Large Banks or Large Credit Card Banks). We assume the residuals are due to the unique characteristics of each Bank's credit card portfolio. These characteristics might include the bank's specific credit policies, customer risk profiles, or portfolio management strategies.
-
-This approach assumes that the broader "market" trend takes into account, to some extent, the impact of macroeconomic factors. However, we may want to include macroeconomic variables to improve the model's ability to explain credit card delinquencies that are not captured by the group trend alone.
-
-US Federal Reserve Economic Data [@fred] provides macroeconomic data series; we can use past literature and new analysis to inform our choice of variables.
-
-@Agarwal2003, using proprietary credit card data of 700 thousand customers from 1995 to 2001, concluded that *unemployment* is a key determinant of consumer delinquency and bankruptcy. However, @taghiyeh2021 concluded that *unemployment* as the positive correlation between delinquency and unemployment hasn't continued; as unemployment decreased, deliquency increased.  to have been 
-explored 19 lagged macroeconomic variables and found the most significant to predict credit card loss was: previous quarter *Unemployment*, *Building permits* and *Initial unemployment insurance claims*; previous year's (lag 4) *Money stock* and *ISM Purchasing Mangers Index* and the current quarter's *Weekly hours worked by manufacturing workers*. @GHJ2001 pointed to *consumer debt ratio* i.e. when debt payment obligations become too high relative to disposable income for the population as a whole, borrowers are unable to service their debts. @taghiyeh2021 explored 19 lagged macroeconomic variables and found the most significant to predict credit card loss was: previous quarter *Unemployment*, *Building permits* and *Initial unemployment insurance claims*; previous year's (lag 4) *Money stock* and *ISM Purchasing Mangers Index* and the current quarter's *Weekly hours worked by manufacturing workers*.
-
-
-```{r}
-#| echo: false
-#| warning: false
                 
 granger_test_permutations <- function(data, target_col_name = "value.mean", exog_names, max_lag = 4) {
     results <- list()
@@ -46,13 +30,26 @@ apply_reg_filter = TRUE
 overdue30to89.post <- credit_card.overdue30to89.agg(apply_bank_filters, apply_reg_filter)       
 overdue30to89.post.lcbank <- credit_card.overdue30to89.agg.lccbank(apply_bank_filters, apply_reg_filter)
 overdue30to89.post.lbank <-  credit_card.overdue30to89.agg.lbank(apply_bank_filters, apply_reg_filter)             
+
 ```
 
-The figures below plot data series related to consumer financial behaviour following the 2008 financial crisis and the enactment of the Credit Card Accountability Responsibility and Disclosure (CARD) Act in 2010 (see @sec-cardact). 
+As discussed in @sec-trend-event the impact of the partnership event can be masked by trends and seasonality.
+
+The simplist model approach we look at is the Market model, see @sec-model-market, which involves adjusting each Bank's *`r credit_card.target_label()`* by removing the influence of the broader trend within its respective group (Large Banks or Large Credit Card Banks). We assume the residuals are due to the unique characteristics of each Bank's credit card portfolio. These characteristics might include the bank's specific credit policies, customer risk profiles, or portfolio management strategies.
+
+This approach assumes that the broader "market" trend takes into account, to some extent, the impact of macroeconomic variables. However, we may want to include macroeconomic variables to improve the model's ability to explain credit card delinquencies that are not captured by the group trend alone.
+
+US Federal Reserve Economic Data [@fred] provides macroeconomic data series; we can use past literature and new analysis to inform our choice of variables.
+
+The figures below plot data series related to consumer financial behaviour before and after the 2008 financial crisis and the enactment of the Credit Card Accountability Responsibility and Disclosure (CARD) Act in 2010 (see @sec-cardact). We can see that the onset of the COVID-19 pandemic marks a distinct phase of economic upheaval.
 
 Each variable has been adjusted for population changes and inflation to ensure we can compare across different time periods.
 
-In the decade that ensued post crisis, there is a noticeable trend of increasing personal expenditures and although personal incomes also increase, their rate of increase does not match that of expenditures. This divergence results in a gradual rise in the consumer debt service ratio (CDSP), indicating an expanding gap between income and debt obligations. Notably, throughout this period, credit card delinquency rates remain relatively stable, suggesting improved risk management practices. However, the onset of the COVID-19 pandemic marks a distinct phase of economic upheaval.
+@GHJ2001, over the period 1981 to 1999, found that delinquency is positively correlated with the consumer debt service ratio, which is the ability for borrowers to service their consumer loans relative to disposable income. Consumer loans include credit cards, other revolving credit and term loans.
+
+In the decade that ensued post 2008 crisis, there is a noticeable trend of increasing personal expenditures and although personal incomes also increase, their rate of increase does not match that of expenditures. This divergence results in a gradual rise in the consumer debt service ratio (CDSP), indicating an expanding gap between income and debt obligations. Notably, this isn't reflected in credit card delinquency rates which remain relatively stable suggesting consumer debt is no longer a strong determinant of delinquency by itself. The broader measure, household debt (TDSP), which is consumer debt plus mortgage loans, may be a more informative of measure of a household's overall financial health; household debt decreased while consumer debt increased (see @fig-econ-cat-comb-3). 
+
+@Agarwal2003, using proprietary credit card data of 700 thousand customers from 1995 to 2001, concluded that *unemployment* is a key determinant of consumer delinquency and bankruptcy.  However, @taghiyeh2021 concluded that the positive correlation between delinquency and unemployment hasn't continued. This can be seen in @fig-econ-cat-comb-4 where post 2008 financial crisis delinquency decreased as unemployment decreased but delinquency rates remained relatively stable (see @fig-regulation-3). @taghiyeh2021 found the most significant variables to predict credit card loss was: previous quarter *Unemployment*, *Building permits* and *Initial unemployment insurance claims*; previous year's (lag 4) *Money stock* and *ISM Purchasing Mangers Index* and the current quarter's *Weekly hours worked by manufacturing workers*. 
 
 ::: {#fig-usmeasures .panel-tabset}
 
@@ -60,6 +57,12 @@ In the decade that ensued post crisis, there is a noticeable trend of increasing
 ```{r}
 #| warning: false
 #| error: false
+#| label: fig-econ-cat-comb
+#| fig-subcap: 
+#|   - "Expenditure Measures"
+#|   - "Income & Savings Measures"
+#|   - "Debt Measures"
+#|   - "Unemployment and Confidence Measures" 
 
 plot_us_category("Expenditures",us_measures_qtr, overdue30to89.all, "value.all.median")
 plot_us_category("Income & Savings",us_measures_qtr, overdue30to89.all, "value.all.median")
@@ -71,7 +74,12 @@ plot_us_category("Economy",us_measures_qtr, overdue30to89.all, "value.all.median
 ```{r}
 #| warning: false
 #| error: false
-
+#| label: fig-econ-cat-lc
+#| fig-subcap: 
+#|   - "Expenditure Measures"
+#|   - "Income & Savings Measures"
+#|   - "Debt Measures"
+#|   - "Unemployment and Confidence Measures" 
 plot_us_category("Expenditures", us_measures_qtr, overdue30to89.all.lbank, "value.group.median")
 plot_us_category("Income & Savings", us_measures_qtr, overdue30to89.all.lbank, "value.group.median")
 plot_us_category("Debt", us_measures_qtr, overdue30to89.all.lbank, "value.group.median")
@@ -82,6 +90,12 @@ plot_us_category("Economy", us_measures_qtr, overdue30to89.all.lbank, "value.gro
 ```{r}
 #| warning: false
 #| error: false
+#| label: fig-econ-cat-lcc
+#| fig-subcap: 
+#|   - "Expenditure Measures"
+#|   - "Income & Savings Measures"
+#|   - "Debt Measures"
+#|   - "Unemployment and Confidence Measures" 
 plot_us_category("Expenditures", us_measures_qtr, overdue30to89.all.lcbank, "value.group.median")
 plot_us_category("Income & Savings", us_measures_qtr, overdue30to89.all.lcbank, "value.group.median")
 plot_us_category("Debt", us_measures_qtr, overdue30to89.all.lcbank, "value.group.median")
@@ -91,10 +105,14 @@ plot_us_category("Economy", us_measures_qtr, overdue30to89.all.lcbank, "value.gr
 
 :::
 
+### Statistical tests
 
-### Granger Test
+In time series analysis we can use tests like Cross-Correlation Function (CCF) and Granger Test to understand relationships between variables.
 
- Intuitively, changes in the macroeconomic environment will take time to impact credit card deliquency. We can test for significance of different lags using the Granger test for each variable.
+
+#### Granger Test
+
+Intuitively, changes in the macroeconomic environment will take time to impact credit card delinquency. We can test for significance of different lags using the Granger test for each variable.
 
 "X is said to Granger-cause Y if Y can be better predicted using the histories of both X and Y than it can by using the history of Y alone."[@granger2011]
 
@@ -152,7 +170,7 @@ granger_test_permutations(data = overdue30to89.post.lcbank |> left_join (us_meas
 
 :::
 
-### Cross-Correlation Function 
+#### Cross-Correlation Function 
 
 The Cross-Correlation function measures the correlation between series X at time $t+k$ and series Y at time $t$, for various lags $k$. A positive $k$ indicates future values of X relative to Y, conversely, a negative $k$ indicates past values of X relative to Y.
 
@@ -170,6 +188,7 @@ Below tests various macroeconomic variables (X) against *`r credit_card.target_l
 #| fig-subcap:
 #|   - "RRSFS.Pop - Real Advance Retail and Food Services Sales per capita"
 #|   - "CDSP - Consumer Debt Service Payments as a Percent of Disposable Personal Income"
+#|   - "TDSP - Household Debt Service Payments as a Percent of Disposable Personal Income"
 #|   - "UNRATE - Unemployment Rate"
 #| layout-ncol: 2
 
@@ -181,6 +200,11 @@ run_ccf_test(data = overdue30to89.post |> left_join (us_measures_qtr,by = join_b
 run_ccf_test(data = overdue30to89.post |> left_join (us_measures_qtr,by = join_by(Quarter)),
              target_variable = "value.all.median",
              exog_variable = "CDSP",
+             do_difference = TRUE)    
+
+run_ccf_test(data = overdue30to89.post |> left_join (us_measures_qtr,by = join_by(Quarter)),
+             target_variable = "value.all.median",
+             exog_variable = "TDSP",
              do_difference = TRUE)    
 
 run_ccf_test(data = overdue30to89.post |> left_join (us_measures_qtr,by = join_by(Quarter)),
@@ -199,6 +223,7 @@ run_ccf_test(data = overdue30to89.post |> left_join (us_measures_qtr,by = join_b
 #| fig-subcap:
 #|   - "RRSFS.Pop - Real Advance Retail and Food Services Sales per capita"
 #|   - "CDSP - Consumer Debt Service Payments as a Percent of Disposable Personal Income"
+#|   - "TDSP - Household Debt Service Payments as a Percent of Disposable Personal Income"
 #|   - "UNRATE - Unemployment Rate"
 #| layout-ncol: 2
 run_ccf_test(data = overdue30to89.post.lbank |> left_join (us_measures_qtr,by = join_by(Quarter)),
@@ -210,6 +235,11 @@ run_ccf_test(data = overdue30to89.post.lbank |> left_join (us_measures_qtr,by = 
              target_variable = "value.group.median",
              exog_variable = "CDSP",
              do_difference = TRUE)    
+
+run_ccf_test(data = overdue30to89.post.lbank |> left_join (us_measures_qtr,by = join_by(Quarter)),
+             target_variable = "value.group.median",
+             exog_variable = "TDSP",
+             do_difference = TRUE)                 
 
 run_ccf_test(data = overdue30to89.post.lbank |> left_join (us_measures_qtr,by = join_by(Quarter)),
              target_variable = "value.group.median",
@@ -228,6 +258,7 @@ run_ccf_test(data = overdue30to89.post.lbank |> left_join (us_measures_qtr,by = 
 #| fig-subcap:
 #|   - "RRSFS.Pop - Real Advance Retail and Food Services Sales per capita"
 #|   - "CDSP - Consumer Debt Service Payments as a Percent of Disposable Personal Income"
+#|   - "TDSP - Household Debt Service Payments as a Percent of Disposable Personal Income"
 #|   - "UNRATE - Unemployment Rate"
 #| layout-ncol: 2
 run_ccf_test(data = overdue30to89.post.lcbank |> left_join (us_measures_qtr,by = join_by(Quarter)),
@@ -242,6 +273,11 @@ run_ccf_test(data = overdue30to89.post.lcbank |> left_join (us_measures_qtr,by =
 
 run_ccf_test(data = overdue30to89.post.lcbank |> left_join (us_measures_qtr,by = join_by(Quarter)),
              target_variable = "value.group.median",
+             exog_variable = "TDSP",
+             do_difference = TRUE)    
+
+run_ccf_test(data = overdue30to89.post.lcbank |> left_join (us_measures_qtr,by = join_by(Quarter)),
+             target_variable = "value.group.median",
              exog_variable = "UNRATE",
              do_difference = TRUE)                                  
 
@@ -249,7 +285,7 @@ run_ccf_test(data = overdue30to89.post.lcbank |> left_join (us_measures_qtr,by =
 
 :::
 
-#### Cross-Correlation between macro economic variables
+##### Cross-Correlation between macro economic variables
 
 @fig-ccf-rrsfs-1 and @fig-ccf-rrsfs-2 assumes *Real Advance Retail and Food Services Sales per capita* (RRSFS.Pop) is our dependant variable (Y). we observe significant correlations at both positive and negative lags. This pattern indicates a bidirectional or feedback relationship between X and the dependent variable Y. For example, @fig-ccf-rrsfs-2 shows significant correlation at -1 lag suggesting that changes in unemployment have an impact on retail and food sales in the next quarter. But there's also a weaker but significant correlation at +1 which suggests a change in retail and food sales impacts unemployment in the following quarter. To remove the potential risk of multicollinearity we would only have one of these variables included in the same model.  
 
@@ -282,7 +318,15 @@ run_ccf_test(data = us_measures_qtr,
 
 ## Portfolio Data
 
-### Granger Test
+Banks have the capability to influence both the quantity and quality of their credit card portfolios. By adjusting their risk appetite, banks can navigate economic downturns more effectively; for instance, by tightening lending criteria.
+
+Similarly, borrowers' payment behaviours' can evolve. @Boston2016 monitored the same individuals' credit card usage and employment status over time, revealed that borrowers tend to reduce their reliance on credit cards when they are unemployed.
+
+To further understand delinquency, we can employ portfolio-level explanatory variables, such as unused credit commitments and the volume of credit card loans. For instance, an uptick in delinquency rates, absent any alterations in the portfolio, could signal macroeconomic factors affecting current borrowers. Conversely, changes within the portfolio might suggest different causes, such as a strategic decision to capture more market share by adding higher-risk borrowers - including via a partnership.
+
+### Statistical tests
+
+#### Granger Test
 
 ```{r}
 #| warning: false
@@ -332,7 +376,7 @@ granger_test_permutations(data = ubpr_data.lcbank |> filter(),
 
 :::
 
-### Cross-Correlation Function  
+#### Cross-Correlation Function  
 
 ::: {#fig-ccf-port .panel-tabset}
 
@@ -392,4 +436,3 @@ exog_measures |> map(\(x) run_ccf_test(data = ubpr_data.lcbank,
 ```
 :::
 
-## References
