--- a/references.bib
+++ b/references.bib
@@ -199,6 +199,13 @@
   issn = {0022-0515},
   url = {https://uoelibrary.idm.oclc.org/login?url=https://www.proquest.com/scholarly-journals/event-studies-economics-finance/docview/213164851/se-2}
 },
+@article{Boston2016,
+  title = {Do Consumers Rely More Heavily on Credit Cards While Unemployed?},
+  author = {Cole, Allison},
+  year = {2016},
+  publisher = {Federal Reserve Bank of Boston},
+  url = {https://www.bostonfed.org/publications/research-data-report/2016/do-consumers-rely-more-heavily-on-credit-cards-while-unemployed.aspx}
+},
 @article{GMPartner,
   url = {https://www.reuters.com/markets/us/gm-launches-new-credit-card-with-goldman-sachs-2022-01-10/}
 },
@@ -213,8 +220,9 @@
 },
 @article{BestBuyPartner,
   url = {https://news.yahoo.com/citigroup-moves-best-buy-credit-165042624.html}
-}
+},
 
 
 
 #Hierarchical modeling and analysis for spatial data
+#Data Analysis Using Regression and Multilevel/Hierarchical Models
