restructure content and fix hier predictions

--- a/data_fed.qmd
+++ b/data_fed.qmd
@@ -39,17 +39,15 @@ The simplist model approach we look at is the Market model, see @sec-model-marke
 
 This approach assumes that the broader "market" trend takes into account, to some extent, the impact of macroeconomic variables. However, we may want to include macroeconomic variables to improve the model's ability to explain credit card delinquencies that are not captured by the group trend alone.
 
-US Federal Reserve Economic Data [@fred] provides macroeconomic data series; we can use past literature and new analysis to inform our choice of variables.
+US Federal Reserve Economic Data [@fred] provides macroeconomic data series; we can use published literature and new analysis to inform our choice of variables.
 
 The figures below plot data series related to consumer financial behaviour before and after the 2008 financial crisis and the enactment of the Credit Card Accountability Responsibility and Disclosure (CARD) Act in 2010 (see @sec-cardact). We can see that the onset of the COVID-19 pandemic marks a distinct phase of economic upheaval.
 
 Each variable has been adjusted for population changes and inflation to ensure we can compare across different time periods.
 
-@GHJ2001, over the period 1981 to 1999, found that delinquency is positively correlated with the consumer debt service ratio, which is the ability for borrowers to service their consumer loans relative to disposable income. Consumer loans include credit cards, other revolving credit and term loans.
+@GHJ2001, over the period 1981 to 1999, found that delinquency is positively correlated with the *consumer debt service ratio*, which is the ability for borrowers to service their consumer loans relative to disposable income. Consumer loans include credit cards, other revolving credit and term loans. In the decade that ensued post 2008 crisis, there is a noticeable trend of increasing personal expenditures and although personal incomes also increase, their rate of increase does not match that of expenditures. This divergence results in a gradual rise in the consumer debt service ratio (CDSP), indicating an expanding gap between income and debt obligations. Notably, this isn't reflected in credit card delinquency rates which remain relatively stable suggesting consumer debt is no longer a strong determinant of delinquency by itself. The broader measure, household debt (TDSP), which is consumer debt plus mortgage loans, may be a more informative of measure of a household's overall financial health. We can see in @fig-econ-cat-comb-3 that household debt was decreasing while consumer debt increased. 
 
-In the decade that ensued post 2008 crisis, there is a noticeable trend of increasing personal expenditures and although personal incomes also increase, their rate of increase does not match that of expenditures. This divergence results in a gradual rise in the consumer debt service ratio (CDSP), indicating an expanding gap between income and debt obligations. Notably, this isn't reflected in credit card delinquency rates which remain relatively stable suggesting consumer debt is no longer a strong determinant of delinquency by itself. The broader measure, household debt (TDSP), which is consumer debt plus mortgage loans, may be a more informative of measure of a household's overall financial health; household debt decreased while consumer debt increased (see @fig-econ-cat-comb-3). 
-
-@Agarwal2003, using proprietary credit card data of 700 thousand customers from 1995 to 2001, concluded that *unemployment* is a key determinant of consumer delinquency and bankruptcy.  However, @taghiyeh2021 concluded that the positive correlation between delinquency and unemployment hasn't continued. This can be seen in @fig-econ-cat-comb-4 where post 2008 financial crisis delinquency decreased as unemployment decreased but delinquency rates remained relatively stable (see @fig-regulation-3). @taghiyeh2021 found the most significant variables to predict credit card loss was: previous quarter *Unemployment*, *Building permits* and *Initial unemployment insurance claims*; previous year's (lag 4) *Money stock* and *ISM Purchasing Mangers Index* and the current quarter's *Weekly hours worked by manufacturing workers*. 
+@Agarwal2003, using proprietary credit card data of 700 thousand customers from 1995 to 2001, concluded that *unemployment* is a key determinant of consumer delinquency and bankruptcy. However, @taghiyeh2021 in their 2021 study concluded that unemployement is no longer sufficient. This can be seen in @fig-econ-cat-comb-4 where post 2008 financial crisis delinquency decreased as unemployment decreased but has since remained relatively stable as unemployment as decreased further. @taghiyeh2021 found the most significant variables to predict credit card loss was: previous quarter *Unemployment*, *Building permits* and *Initial unemployment insurance claims*; previous year's (lag 4) *Money stock* and *ISM Purchasing Mangers Index* and the current quarter's *Weekly hours worked by manufacturing workers*. 
 
 ::: {#fig-usmeasures .panel-tabset}
 
