--- a/references.bib
+++ b/references.bib
@@ -52,7 +52,7 @@
   title = {CARD Act Report: A review of the impact of the CARD Act on the consumer credit card market},
   url = {https://files.consumerfinance.gov/f/201309_cfpb_card-act-report.pdf}
 },
-@website{boston2014,
+@article{boston2014,
   author = {Jambulapati, Vikram and Stavins, Joanna},
   publisher = {Federal Reserve Bank of Boston},
   year = {2013},
@@ -60,12 +60,28 @@
   title = {The Credit CARD Act of 2009: What Did Banks Do?},
   url = {https://www.bostonfed.org/-/media/Documents/Workingpapers/PDF/ppdp1307.pdf}
 },
+@article{boston2000,
+  author = {Stavins, Joanna},
+  publisher = {Federal Reserve Bank of Boston},
+  year = {2000},
+  month = {July},
+  day = {27},
+  title = {Credit Card Borrowing, Delinquency, and Personal Bankruptcy},
+  url = {https://www.bostonfed.org/publications/new-england-economic-review/2000-issues/issue-july-august-2000/credit-card-borrowing-deliquency-and-personal-bankruptcy.aspx}
+},
 @website{cfpb2010z,
   author = {CFPBb},
   publisher = {Consumer Financial Protection Bureau},
   year = {2023},
   title = {12 CFR Part 1026 - Truth in Lending (Regulation Z)},
   url = {https://www.consumerfinance.gov/rules-policy/regulations/1026/}
+},
+@website{rproject,
+  author = {Hebbali, Aravind},
+  publisher = {R Foundation for Statistical Computing},
+  year = {2023},
+  title = {Collinearity Diagnostics, Model Fit & Variable Contribution},
+  url = {https://cran.r-project.org/web/packages/olsrr/vignettes/regression_diagnostics.html}
 },
 @article{Agarwal2003,
   title = {Determinants of credit card delinquency and bankruptcy: Macroeconomic factors},
