--- a/data_ffiec.qmd
+++ b/data_ffiec.qmd
@@ -61,7 +61,7 @@ Why are there thousands of Banks? The US Banking system grew out of 19th-century
 
 ## Data Period {#sec-cardact}
 
-Regulation implemented in 2010 had a material impact on the credit card market [@cfpb2013; also @boston2014]. As highlighted by @boston2014, regulation coincided with the 2008 financial crisis and recession, making it difficult to fully assert causation [-@boston2014].
+Regulation implemented in 2010 had a material impact on the credit card market [@cfpb2013; also @boston2014]. As highlighted by @boston2014, regulation coincided with the 2008 financial crisis and post recovery period, making it difficult to fully assert causation [-@boston2014].
 
 The regulations introduced were:
 
@@ -126,9 +126,9 @@ overdue30to89 |>
 ```
 ## Bank Outliers {#sec-outliers}
 
-As we are dealing with time series data, we need to identify banks where their individual series characteristics are markedly different from those of its peers.
+In the context of time series data analysis, our objective is to identify banks that exhibit distinct characteristics across their series, rather than focusing on isolated data points. 
 
-Taking the approach from @Hyndman2021 we can use Principal Components Analysis (PCA) to review outliers across different statistical features or feature sets. 
+Following the methodology proposed by @Hyndman2021, we can use Principal Components Analysis (PCA) across different statistical features or feature sets, to identify bank that diverge from its peers. 
 
 ::: {#tbl-outliers .panel-tabset} 
 
@@ -220,7 +220,7 @@ outlier.plot(overdue30to89_lbanks, pca_output, -3, 3, -2, 2)
 selected_feats <- c("lumpiness","stability","seasonal", "pacf", "acf")
 
 feature_data(overdue30to89_lbanks,selected_feats) |>
-    select(-c(IDRSSD,Measure,Label,Description,BankType)) |> 
+    dplyr::select(-c(IDRSSD,Measure,Label,Description,BankType)) |> 
         knitr::kable(format = "html")    
 ```
 ::: 
@@ -276,7 +276,7 @@ ggplot(final_df, aes(x=Value, colour = BankType))+
 final_df |> na.omit() |>
     filter(BankType == "LargeCreditCardBank") |>
       features(Value, quantile)|> 
-        select(-c(IDRSSD,Measure,Label,Description,BankType)) |>
+        dplyr::select(-c(IDRSSD,Measure,Label,Description,BankType)) |>
         arrange(`100%`)|> 
         knitr::kable(format = "html")        
 ```
@@ -288,7 +288,7 @@ final_df |> na.omit() |>
 final_df |> na.omit() |>
     filter(BankType == "LargeBank") |>
       features(Value, quantile)|> 
-        select(-c(IDRSSD,Measure,Label,Description,BankType)) |> 
+        dplyr::select(-c(IDRSSD,Measure,Label,Description,BankType)) |> 
         arrange(`100%`)|> 
         knitr::kable(format = "html")
 ```
@@ -367,9 +367,7 @@ final_df |> na.omit() |> pull(value_diff) |> Box.test(lag = 10, type = "Ljung")
 
 7. @fig-lfeature-8 *Large Credit Card Banks* is not stationary i.e. the statistical properties of the time series changes, which makes it difficult to identify trends and patterns. Performing a difference i.e. to get the quarterly change in UBPRE524, makes the series stationary as shown in @fig-acf-2. This can be confirmed by performing an augmented Dickey–Fuller (ADF) test on the differenced value. We also see that, post differencing, there are autocorrelation coefficients above the significance threshold. This is likely due to seasonality as these are at regular intervals. The decreasing magnitude of these coefficients tell us the earlier lags have a stronger influence than values further in the past.
 
-    Autocorrelation, the correlation between the timeseries and its own lagged values, can inform a moving average (MA) Model. If we additionally look at the partial autocorrelation, the correlation after removing the effect of any correlations due to the terms at shorter lags (see @fig-acf-3 and @fig-acf-4)
-    
-    @fig-acf for *Large Credit Card Banks* we see a Seasonal-ARMA process as both ACF and PACF are declining gradually around every 4th lag. This confirms what we saw in @fig-lfeature-3.
+Autocorrelation, the correlation between the timeseries and its own lagged values, can inform a AutoRegressive Moving Average (ARMA) Model. In @fig-acf we see a Seasonal-ARMA process in *Large Credit Card Banks* as both ACF and PACF are declining gradually around every 4th lag. This confirms what we saw in @fig-lfeature-3.
 
 ```{r}
 #| warning: false
@@ -422,4 +420,3 @@ In summary, based on exploration of the data we will prepare the data for modell
 
 5. the Target measure to make it stationary. We do this by taking the first difference. 
 
-## References
