--- a/model_market.qmd
+++ b/model_market.qmd
@@ -42,7 +42,6 @@ observation_data <- model_data$observation_data
 partner_banks <- credit_card.partnerships.long()
 
 market_formula <- "UBPRE524.diff ~ UBPRE524.group.log.diff"
-#market_formula <- "UBPRE524.diff ~ UBPRE524.group.log.diff + UBPRE524.all.log.diff"
 m_table <- estimation_data |> fill_gaps() |> model(tslm = TSLM(as.formula(market_formula)))
 
 augmented_data <- m_table |> augment()
@@ -73,6 +72,9 @@ m_table |> filter(BankName %in% observation_data$BankName) |> glance() |> reloca
     mutate(across(where(is.numeric), \(x) round(x,4))) |>  
     rmarkdown::paged_table()  
 ```
+
+In @tbl-coef-market we can see the standard error of *UBPRE524.group.log.diff* is small relative to its estimate indicating a precise estimate. A small p-value (typically <0.05) suggests strong evidence against the null hypothesis, indicating that *UBPRE524.group.log.diff* is statistically significant.
+
 ```{r}
 #| warning: false
 #| label: tbl-coef-market
@@ -178,19 +180,14 @@ augmented_data  |>
 
 ## Time Series Cross-Validation
 
-One approach to evaluate the predictive performance of our model is to use One-step ahead cross-validation, also known as walk-forward validation, which is specifically designed for time series.
+One approach to evaluate the predictive performance of our model is to use One-step ahead cross-validation, also known as walk-forward validation, which is specifically designed for time series. This approach involves progressively moving forward in time, making predictions one step ahead. To quantify the accuracy of predictions made during this process, the Root Mean Square Error (RMSE) and Mean Absolute Error (MAE) is commonly used. RMSE measures the average magnitude of the errors between the predicted and actual values, giving more weight to larger errors due to its squaring component. MAE is the average of the absolute differences between the predicted values and actual values so is not as sensitive to outliers.
 
+The results @tbl-market-cv show that the RMSE and MAE of the cross-validated models (CV) closely matches the RMSE and MAE observed in the initial model evaluation (Training). This indicates that the model is generalising well to unseen data and not overfitting.
 ```{r}
 #| warning: false
 #| output: false
 
-
 m_table |> fabletools::accuracy()|> readr::write_csv("data/results/estimate_market_metrics.csv")
-
-# # Timeseries CV 
-# est_data_tr <- estimation_data |>
-#                     stretch_tsibble(.init = 3, .step = 1) |>
-#                     relocate( .id)
 
 init = 13
 model_name = "tslm"
@@ -218,13 +215,6 @@ unnested_results <- results |>
 
 unnested_results |> dplyr::select(BankName, BankType, .model, .type, RMSE, MAE) |> 
     readr::write_csv(glue("data/results/tscv/estimate_tscv_market_metrics.csv"))
-
-# # TSCV accuracy
-# est_data_tr |>
-#   model(tslm = TSLM(as.formula(market_formula))) |>
-#   forecast(new_data = est_data_tr) |>
-#   fabletools::accuracy(estimation_data)|> 
-#   readr::write_csv("data/results/estimate_tscv_market_metrics.csv")
 
 ```
 
@@ -263,22 +253,19 @@ comb |> group_by(.type) |>
 ```{r}
 #| warning: false
 #| echo: false
-#| results: hide
-#| fig-keep: all
-#| label: fig-pred-observed
-#| fig-cap: "Prediction vs. Observed Event"
+#| label: fig-pred-observed-market
 get_prediction <- function(bank, partner, all_data, models) {
   bank_data <- all_data |> filter(BankName == bank)
   event_data <- bank_data |> filter(!!as.name(partner) >=0) |> head(8) 
   fcast <- models |>
     filter(BankName == bank)  |>
-    forecast(new_data= event_data, bootstrap=TRUE, times = 100)
+    forecast(new_data= event_data, bootstrap=TRUE, times = 5000)
 
   original_scale(fcast, all_data) |> add_column(Partner = partner)  
 }
 
-result <- map2(partner_banks$Bank, partner_banks$Partner, get_prediction, data, m_table)  |> 
-  list_rbind() |> left_join(data |> dplyr::select(observed = UBPRE524.Value),by = join_by(IDRSSD, BankName, BankType, Quarter) ) |> as_tibble() |> dplyr::select(Partner, BankName, Quarter, observed, predicted) 
+result <- map2(partner_banks$Bank, partner_banks$Partner, get_prediction, data, m_table) |> 
+          list_rbind() |> left_join(data |> dplyr::select(observed = UBPRE524.Value),by = join_by(IDRSSD, BankName, BankType, Quarter) ) |> as_tibble() |> dplyr::select(Partner, BankName, Quarter, observed, predicted)    
 
 map2(partner_banks$Bank, partner_banks$Partner, plot_prediction, result, data) 
 
@@ -303,5 +290,3 @@ print_ar(result, "GAP", "SYNCHRONY BANK (1216022)")
 print_ar(result, "GAP", "BARCLAYS BANK DELAWARE (2980209)")
 
 ```
-
-## References
